0.12.16
=======
 * FreeBSD Compile fixes (thanks to Heiner Eichmann).
 * Always force 44.1khz in the Lame MP3 encoder plugin.
 * Fixed VideoDVD creation on rewritable media.
 * NetBSD support (thanks to Mark Davies).
 * Fixed Copy of Enhanced Audio CDs with CD-Text
 * Ignore case when comparing MD5 sums entered by the user.

0.12.15
=======
 * Write more metadata tags in the default setup of the external encoder plugin.
 * Fixed on-the-fly Video DVD creation
 * Fixed data project verification in case filenames had to be shortened due to Joliet limitations.
 * Use -dvd-compat parameter to close DVDs in on-the-fly mode.
 * Fixed libdvdcss handling (again), no crashes anymore.
 * Fixed the "invalid url" bug.
 * Use SG IO for scsi commands with newer linux kernels. This should fix problems with scsi device
   detection.
 * Warn about shortened filenames due to Joliet restrictions before starting the burning process.

0.12.14
=======
 * Make sure new projects are not already marked as modified.
 * Fixed (hopefully) the last bug related to Data project verification.

0.12.13
=======
 * Honor umask when creating directories for Audio CD ripping.
 * Only update the buffer state for DVD burning if it really changes.
 * Fixed a crash in verification if the CD/DVD does not contain RR extensions.
 * Lowered default DVD writing buffer size to 32 MB to avoid "memorylock limit" problems
   as described on http://fy.chalmers.se/~appro/linux/DVD+RW/tools/
 * Fixed loading of libdvdcss.

0.12.12
=======
 * Fixed another bug in the iso options code which sometimes resulted in a failed verification.
 * Properly close the reading device when copying VideoDVDs. This bug resulted in a blocked device.
 * Fixed handling of filenames in libdvdcss backend (this fixes VideoDVD copy).

0.12.11
=======
 * Fixed selection in the audio CD ripping window.
 * Fixed info block handling in WAVE audio file decoder: no more clicks at the end.