@@ -70,7 +70,6 @@ class K3bIsoImageWritingDialog : public K3bInteractionDialog
   void setupGui();
   QString imagePath() const;
 
-  K3bIso9660ImageWritingJob* m_job;
   K3bMd5Job* m_md5Job;
 
   K3bWriterSelectionWidget* m_writerSelectionWidget;
