@@ -5,6 +5,8 @@
  * Fixed VideoDVD creation on rewritable media.
  * NetBSD support (thanks to Mark Davies).
  * Fixed Copy of Enhanced Audio CDs with CD-Text
+ * Changed default boot cataloge name from "boot.cataloge" to "boot.catalog"
+ * Fixed a crash when reusing the same DVD Iso Image writing dialog.
  * Ignore case when comparing MD5 sums entered by the user.
 
 0.12.15
